# freqmoda

./: .env.example  .gcloudignore  .gitignore  AGENT.md  AGENTS.md  Cargo.toml  Dockerfile.gateway  Dockerfile.streaming  Dockerfile.web-demo  Dockerfile.web-ui  README.md  TODO.md  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  codspeed.yml  playwright.yml  rust.yml
.sqlx/: query-23da68d75d2e11ab6061cd2bf17fc485e4b94c67ea91231bfc1bc523f60c05d2.json  query-43d7ee1f59f16cbe3caf19e8d2f665ea60f2c016af68263d15b1c8ae039db286.json  query-46eda5d6ee3aea703bae3957c95f27456ed27fdac962da695310ea471fc804fd.json
agent-worker/: main.py
crates/ffmpeg/: Cargo.toml
crates/ffmpeg-sys/: Cargo.toml  build.rs
crates/ffmpeg-sys/include/: wrapper.h
crates/ffmpeg-sys/src/: lib.rs
crates/ffmpeg/src/: error.rs  handle.rs  io.rs  lib.rs  pipeline.rs
docs/: BENCHMARKS.md  BackendDesignDoc.md  ClosedLoopAudioIteration.md  GTM.md  IMPLEMENTATION_SUMMARY.md
gateway-service/: .env.example  Cargo.toml  README.md  cloudbuild.yaml
gateway-service/docs/: DEPLOYMENT.md  POSTHOG_INTEGRATION.md  POSTHOG_PROXY.md
gateway-service/src/: config.rs  database.rs  error.rs  main.rs  models.rs  routes.rs  startup.rs
gateway-service/src/handlers/: audio.rs  chat.rs  health.rs  html.rs  mod.rs  posthog.rs
gateway-service/src/middleware/: rate_limit.rs  session.rs
gateway-service/src/services/: claude.rs  mod.rs  streaming_engine.rs
gateway-service/static/: site.webmanifest
gateway-service/templates/: chat.html  chat_clean.html  index.html  sample_chat.html
gateway-service/tests/: e2e_tests.rs  integration_test.rs
gateway-service/tests/helpers/: config.rs  database.rs  mocks.rs  mod.rs  redis.rs  test_app.rs
migrations/: 001_initial.sql  20241207000001_create_audio_versions.sql
scripts/: check-services.sh  deploy-gateway-service.sh  deploy-streaming-engine.sh  deploy-web-demo.sh  deploy-web-ui.sh  init_db.sh  run_benchmarks.sh  setup-gateway-infra.sh  setup-infra.sh  setup-web-demo-infra.sh  setup-web-ui-infra.sh  test-deployment.sh  test-gateway-deployment.sh  test-web-demo-deployment.sh  test-web-ui-deployment.sh  test_codspeed.sh
src/: app.html
src/lib/: effect-presets.ts  samples.ts  types.ts
src/lib/server/: streaming-engine.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/api/chat/: +server.ts
src/routes/api/health/: +server.ts
src/routes/sample/[key]/: +page.server.ts  +page.svelte
streaming-engine/: .gcloudignore  .gitignore  Cargo.toml  README.md  cloudbuild.yaml
streaming-engine/benches/: README.md  audio_processing.rs  hash_operations.rs  params_parsing.rs  storage_operations.rs  streaming_engine.rs
streaming-engine/config/: base.yml  local.yml
streaming-engine/docs/: DEPLOYMENT.md  ENCODED_PARAMETERS.md  MCP_INTEGRATION.md  request-flow.md
streaming-engine/mcp-server/: README.md  cli.js  index.js  package-lock.json  package.json
streaming-engine/src/: blob.rs  config.rs  lib.rs  main.rs  metrics.rs  middleware.rs  remote.rs  startup.rs  state.rs  tags.rs
streaming-engine/src/cache/: cache.rs  fs.rs  mod.rs  redis.rs
streaming-engine/src/processor/: core.rs  ffmpeg.rs  mod.rs  processor.rs
streaming-engine/src/routes/: list.rs  meta.rs  mod.rs  openapi.rs  params.rs  root.rs  streamingpath.rs
streaming-engine/src/storage/: backend.rs  file.rs  gcs.rs  mod.rs  s3.rs  storage.rs
streaming-engine/src/streamingpath/: hasher.rs  params.rs
streaming-engine/tests/api/: health_check.rs  helpers.rs  main.rs  range_requests.rs
web-demo/: .env.example  Cargo.toml  README.md  cloudbuild.yaml  package-lock.json  package.json
web-demo/.sqlx/: query-827a0c9e80ce67a6be2d93fcd4e96939b41db5f0a531a7a3ed004f4b7cc7e599.json  query-d88ab9bdc7e95772ad61e8f671c2761c52f18be351e7c7b6548c0bbe96d5afa3.json
web-demo/docs/: DEPLOYMENT.md
web-demo/src/: config.rs  database.rs  main.rs  routes.rs  startup.rs  state.rs
web-demo/src/app/: globals.css  layout.tsx  page.tsx
web-demo/src/app/api/audio/[filename]/: route.ts
web-demo/src/app/edit/[id]/: page.tsx
web-demo/src/app/waitlist/: page.tsx
web-demo/src/components/: VolumeControl.tsx  WaveformVisualizer.tsx
web-demo/src/data/: tracks.json
web-demo/src/handlers/: chat.rs  html.rs  mod.rs
web-demo/src/middleware/: session.rs
web-demo/src/services/: streaming_engine.rs
web-demo/templates/: index.html  sample_chat.html
web-demo/tests/: integration_test.rs
web-demo/tests/helpers/: config.rs  database.rs  mocks.rs  redis.rs  test_app.rs
web-ui/: .dockerignore  Cargo.toml  README.md  cloudbuild.yaml
web-ui/docs/: DEPLOYMENT.md
web-ui/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  telemetry.rs
web-ui/src/handlers/: chat.rs  html.rs
web-ui/src/services/: mod.rs  openai.rs  streaming_engine.rs
web-ui/templates/: chat.html
web-ui/tests/: e2e_tests.rs  integration_test.rs
web-ui/tests/helpers/: config.rs  database.rs  redis.rs  test_app.rs
