[package]
name = "web-ui"
version = "0.1.0"
edition = "2024"
default-run = "web-ui"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = "1.0.210"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3"

tracing-log = "0.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
config = "0.14"
urlencoding = "2.1"
color-eyre = "0.6.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.7.0"
rustyline = "14.0"
clap = { version = "4.4", features = ["derive"] }
askama = "0.12"
askama_axum = "0.4"
redis = { version = "0.31.0", features = ["tokio-comp", "tokio-rustls-comp"] }
rustls = "0.23.27"
base64 = "0.22.1"

[[bin]]
name = "chat-cli"
path = "src/bin/chat_cli.rs"

[dev-dependencies]
tower-test = "0.4"
hyper = "1.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }
wiremock = "0.5"
tokio-test = "0.4"
tempfile = "3.8"
claims = "0.7"
once_cell = "1.19"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
futures = "0.3"
serial_test = "3.0"
proptest = "1.4"
mockall = "0.12"
rstest = "0.18"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.34"
pretty_assertions = "1.4"
url = "2.4"
