[package]
name = "ffmpeg"
version = "0.1.0"
edition = "2021"
description = "Safe Rust wrapper for FFmpeg audio processing"
publish = false

[lib]
name = "ffmpeg"
path = "src/lib.rs"

[features]
default = ["network"]
network = []

[dependencies]
ffmpeg-sys = { path = "../ffmpeg-sys" }
thiserror = "1.0"
libc = "0.2"
tracing = "0.1"
